tests/check/waits.co
// RUN: not choreo -i %s 2>&1 | FileCheck %s

__co__ void fail1(f32 [36, 27, 128] input, f32 [18, 9, 128]) {
  parallel p by 6 {
    with index in [3, 9] {
      foreach index {
        f = dma.copy input.chunkat(p, index) => local;
        wait f;
      }
    }
  }
}
// CHECK: error: non-async future 'f` can not be waited.

__co__ f32 [36, 27, 128] fail4(f32 [36, 27, 128] input) {
  f32 [36, 27, 128] output;
  parallel p by 6 {
    with index in [3, 9] {
      foreach index {
        f1 = dma.copy.async input.chunkat(p, index) => local;
        wait f1;
        f2 = dma.copy f1 => output.chunkat(p, index);
        wait f2;
      }
    }
  }
  return output;
}
// CHECK: error: non-async future 'f2` can not be waited.

__co__ void fail2(f32 [36, 27, 128] input, f32 [18, 9, 128] input1) {
  tf : [3, 8];
  int sum = 0;
  parallel p by 6 {
    with index in tf {
      foreach index {
        f1 = dma.copy.async input.chunkat(p, index) => local;
        f2 = dma.copy input1.chunkat(p, index) => local;
        sum = sum + f1.span(0);
        wait f1;
        wait f2;
      }
    }
  }
}
// CHECK: error: non-async future 'f2` can not be waited.

__co__ void fail3(f32 [36, 27, 128] input, f32 [18, 9, 128] input1) {
  parallel p by 6 {
    with index in [3, 8] {
      foreach index {
        dma.copy.async input.chunkat(p, index) => local;
        dma.copy input1.chunkat(p, index) => local;
      }
    }
  }
}
// CHECK: error: forbid to associated async dma without a named future or a named event.

// CHECK: Totally 4 errors have been detected.
